Fill tree form rest

--- a/rtk-frontend/src/app/app.component.html
+++ b/rtk-frontend/src/app/app.component.html
@@ -14,8 +14,8 @@
       </div>
   </nav>
 
-<tree-root [nodes]="nodes" [options]="options"></tree-root>
-
 <div class="container-fluid">
   <router-outlet></router-outlet>
 </div>
+
+<tree-root class="reverse" [nodes]="nodes" [options]="options"></tree-root>
