--- a/rtk-frontend/src/styles.scss
+++ b/rtk-frontend/src/styles.scss
@@ -1,2 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~angular-tree-component/dist/angular-tree-component.css';
+.reverse tree-node-expander {
+  order: 0;
+}
+.reverse tree-node-checkbox {
+  order: 1;
+}
+.reverse .node-content-wrapper {
+  order: 2;
+}
