Remove navbar and fix tests

--- a/rtk-frontend/src/app/app.component.html
+++ b/rtk-frontend/src/app/app.component.html
@@ -1,9 +1,9 @@
-<!-- Just an image -->
-<nav class="navbar navbar-light bg-success">
-    <a class="navbar-brand" href="#">
-      <img src="/assets/images/rtklogo2.png" width="213" height="41" alt="">
-    </a>
-</nav>
+<div class="bg-success text-center p-1">
+    <h2 class="p-0 m-0">
+        {{ title }}
+        <img src="/assets/images/rtklogo2.png" width="213" height="41" alt="">
+    </h2>
+</div>
 
 <div class="container-fluid p-2">
     <div class="row">
