--- a/rtk-frontend/src/app/actions/actions.component.html
+++ b/rtk-frontend/src/app/actions/actions.component.html
@@ -7,7 +7,7 @@
       <button type="button" class="btn btn-primary">View License</button>
     </div>
     <div class="col">
-      <button type="button" class="btn btn-primary">Update List</button>
+      <button (click)="onClickUpdate()" type="button" class="btn btn-primary">Update List</button>
     </div>
   </div>
 </div>
