--- a/rtk-frontend/src/app/app.component.html
+++ b/rtk-frontend/src/app/app.component.html
@@ -1,28 +1,30 @@
-<div class="bg-success text-center p-1">
-    <h2 class="p-0 m-0">
-        {{ title }}
-        <img src="/assets/images/rtklogo2.png" width="213" height="41" alt="">
-    </h2>
-</div>
+<block-ui>
+    <div class="bg-success text-center p-1">
+        <h2 class="p-0 m-0">
+            {{ title }}
+            <img src="/assets/images/rtklogo2.png" width="213" height="41" alt="">
+        </h2>
+    </div>
 
-<div class="container-fluid p-2">
-    <div class="row">
-        <div class="col-12 col-md-8">
-            <app-protected-objects #protectedObjects></app-protected-objects>
-        </div>
-        <div class="col-6 col-md-4">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col">
-                        <app-dates #dates></app-dates>
+    <div class="container-fluid p-2">
+        <div class="row">
+            <div class="col-12 col-md-8">
+                <app-protected-objects #protectedObjects></app-protected-objects>
+            </div>
+            <div class="col-6 col-md-4">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col">
+                            <app-dates #dates></app-dates>
+                        </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <app-actions [protectedObjects]="protectedObjects" [dates]="dates"></app-actions>
+                    <div class="row">
+                        <div class="col">
+                            <app-actions [protectedObjects]="protectedObjects" [dates]="dates"></app-actions>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+</block-ui>
