--- a/rtk-frontend/src/app/protected-objects/protected-objects.component.html
+++ b/rtk-frontend/src/app/protected-objects/protected-objects.component.html
@@ -3,10 +3,20 @@
         <div class="col-5">
             <input type="text" class="form-control" id="filter" placeholder="filter nodes by fuzzy search"/>
         </div>
+        <div class="col">
+            <div class="btn-toolbar" role="toolbar">
+                <div class="btn-group mr-2" role="group">
+                    <button type="button" class="btn btn-light" (click)="tree.treeModel.expandAll()">Expand All</button>
+                </div>
+                <div class="btn-group mr-2" role="group">
+                    <button type="button" class="btn btn-light" (click)="tree.treeModel.collapseAll()">Collapse All</button>
+                </div>
+            </div>
+        </div>
     </div>
 </form>
 <div class="bg-light" style="height: 600px;">
-    <tree-root class="reverse" [focused]="true" [nodes]="nodes" [options]="options">
+    <tree-root #tree class="reverse" [focused]="true" [nodes]="nodes" [options]="options">
         <ng-template #treeNodeTemplate let-node>
             <span *ngIf="node.data.name">{{ node.data.name }} ({{ node.data.data }})</span>
             <span *ngIf="!node.data.name">{{ node.data.data }}</span>
