--- a/rtk-frontend/src/app/protected-objects/protected-objects.component.html
+++ b/rtk-frontend/src/app/protected-objects/protected-objects.component.html
@@ -16,7 +16,7 @@
     </div>
 </form>
 <div class="bg-light" style="height: 600px;">
-    <tree-root #tree class="reverse" [focused]="true" [nodes]="nodes" [options]="options">
+    <tree-root #tree class="reverse" [focused]="true" [nodes]="nodes" [options]="options" (updateData)="onUpdateData($event)">
         <ng-template #treeNodeTemplate let-node>
             <span *ngIf="node.data.name">{{ node.data.name }} ({{ node.data.data }})</span>
             <span *ngIf="!node.data.name">{{ node.data.data }}</span>
