Now the Tree component is located down to the bottom of the screen.

--- a/rtk-frontend/src/app/app.component.html
+++ b/rtk-frontend/src/app/app.component.html
@@ -1,13 +1,13 @@
 <block-ui>
-    <div class="bg-success text-center p-1">
+    <div class="bg-success text-center p-1 vh-7">
         <h2 class="p-0 m-0">
             {{ title }}
             <img src="/assets/images/rtklogo2.png" width="213" height="41" alt="">
         </h2>
     </div>
 
-    <div class="container-fluid p-2">
-        <div class="row">
+    <div class="container-fluid pl-2 pr-2 pt-2 pb-0 vh-93">
+        <div class="row h-100">
             <div class="col-12 col-md-8">
                 <app-protected-objects #protectedObjects></app-protected-objects>
             </div>
