--- a/rtk-frontend/src/styles.scss
+++ b/rtk-frontend/src/styles.scss
@@ -10,6 +10,14 @@
   order: 2;
 }
 
+.vh-7 {
+  height: 7vh;
+}
+
+.vh-93 {
+  height: 93vh;
+}
+
 .viewLicenseModalDialogClass {
   max-width: 95vw;
   width: 95vw;
