--- a/rtk-frontend/src/app/app.component.html
+++ b/rtk-frontend/src/app/app.component.html
@@ -1,17 +1,18 @@
 <block-ui>
-    <div class="bg-success text-center p-1 vh-7">
+    <div class="vh-100" style="min-height: 100vh;">
+    <div class="bg-success text-center p-1" style="height: 50px;">
         <h2 class="p-0 m-0">
             {{ title }}
             <img src="/assets/images/rtklogo2.png" width="213" height="41" alt="">
         </h2>
     </div>
 
-    <div class="container-fluid pl-2 pr-2 pt-2 pb-0 vh-93">
+    <div class="container-fluid pl-2 pr-2 pt-2 pb-0" style="height: calc(100% - 50px);">
         <div class="row h-100">
-            <div class="col-12 col-md-8">
+            <div class="col-12 col-md-10 pr-0">
                 <app-protected-objects #protectedObjects></app-protected-objects>
             </div>
-            <div class="col-6 col-md-4">
+            <div class="col-6 col-md-2">
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col">
@@ -26,5 +27,6 @@
                 </div>
             </div>
         </div>
+    </div>
     </div>
 </block-ui>
