--- a/rtk-frontend/src/app/protected-objects/protected-objects.component.html
+++ b/rtk-frontend/src/app/protected-objects/protected-objects.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid h-100">
     <div class="row h-100">
-        <div class="col">
-            <form style="height: 7%;">
+        <div class="col pr-0 pl-0">
+            <form style="height: 45px;">
                 <div class="row form-group">
                     <div class="col-5">
                         <input type="text" class="form-control" id="filter" placeholder="filter nodes by fuzzy search"/>
@@ -18,7 +18,7 @@
                     </div>
                 </div>
             </form>
-            <div class="bg-light container-fluid" style="height: 93%; position: relative;">
+            <div class="bg-light container-fluid" style="height: calc(100% - 45px); position: relative;">
                 <tree-root #tree class="reverse treeInner" [focused]="true" [nodes]="nodes" [options]="options" (updateData)="onUpdateData($event)">
                     <ng-template #treeNodeTemplate let-node>
                         <span *ngIf="node.data.name">{{ node.data.name }} ({{ node.data.data }})</span>
